fix: Image stretching

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,6 +326,10 @@ h4 {
 #restaurant-img {
   width: 80%;
   margin: 0;
+  object-fit: contain;
+  /* margin: 10px 0;
+  max-width: 100%;
+  max-height: 100%; */
 }
 
 #restaurant-address {
